Comlete overhaul of table view UI

--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -41,5 +41,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>5thgradecursive-2.ttf</string>
+		<string>rm_typerighter_medium.ttf</string>
+		<string>Tahu!.ttf</string>
+	</array>
 </dict>
 </plist>
