added funcs for the two fonts to include for scaling

--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -44,7 +44,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>BebasNeue.otf</string>
-		<string></string>
+		<string>OpenSans-CondLight.ttf</string>
 	</array>
 </dict>
 </plist>
