add 2 new fonts, change all Views,text and buttons color

--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -41,5 +41,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>minya nouvelle bd.ttf</string>
+		<string>neuropol x rg.ttf</string>
+	</array>
 </dict>
 </plist>
