--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>JosefinSans-SemiBold.ttf</string>
 		<string>JosefinSans-Bold.ttf</string>
+		<string>Zacatecas1914-demo-font-ffp.otf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
