--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -20,6 +20,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>rm_typerighter_medium.ttf</string>
+		<string>blackHand_TRIAL.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
