added fonts to project and appearance.swift

--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -41,5 +41,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Kwixter Sketch_D.otf</string>
+		<string>BarlowCondensed-Light.ttf</string>
+	</array>
 </dict>
 </plist>
