--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -41,6 +41,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>AppIcon.png</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>dotty.ttf</string>
