Add tasks TVC theme

--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -36,7 +36,7 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Expressway Regular</string>
+		<string>expressway rg.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
