font returning nill

--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -43,7 +43,7 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Rudiment.ttf</string>
+		<string>A_Sensible_Armadillo.ttf</string>
 	</array>
 </dict>
 </plist>
