--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -7,6 +7,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Architex.ttf</string>
+		<string>NewYorkMedium.otf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
