Project Complete MVP

--- a/Tasks/Tasks/Resources/Info.plist
+++ b/Tasks/Tasks/Resources/Info.plist
@@ -6,6 +6,7 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>armalite.ttf</string>
 		<string>Architex.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
